Putain de theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
         <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/OUAI">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +35,8 @@
         </activity>
         <activity android:name=".AddRuleActivity">
         </activity>
-        <activity android:name=".EndGameActivity">
+        <activity android:name=".EndGameActivity"
+            android:theme="@style/OUAI">
         </activity>
     </application>
 
